--- a/css/style.css
+++ b/css/style.css
@@ -26,19 +26,75 @@ html {
 body {
   box-sizing: border-box;
   padding: 10rem 20rem;
+  background-color: var(--color-eggshell);
+}
+
+body {
   font-family: var(--font-primary);
   font-weight: 400;
+  line-height: 1.7;
   color: var(--color-primary-1);
-  background-color: var(--color-eggshell);
+}
+
+.heading-primary {
+  font-size: 4rem;
+  font-family: var(--font-heading);
+  color: var(--dark-charcoal);
+  font-weight: 400;
+  margin: 3rem 0 1rem 0;
+}
+
+.heading-tertiary {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--color-primary-2);
+}
+
+.paragraph {
+  font-size: 1.6rem;
+  color: var(--color-wenge-brown);
+}
+
+.u-margin-bottom-small {
+  margin-bottom: 1rem;
 }
 
 .container {
   background-color: var(--color-white);
-  max-width: 90rem;
-  padding: 3rem;
+  max-width: 75rem;
+  padding: 4rem;
   border-radius: 20px;
   margin: 0 auto;
   height: 100vh;
+}
+
+.section-intro {
+  width: 100%;
+  height: 100%;
+}
+.section-intro__img {
+  display: block;
+  width: 100%;
+  border-radius: 20px;
+}
+.section-intro__preparation-time {
+  margin: 2rem 0;
+  background-color: hsla(332, 51%, 32%, 0.06);
+  border-radius: 20px;
+  padding: 2rem 3rem;
+}
+.section-intro__time-details {
+  color: var(--color-wenge-brown);
+  font-size: 1.6rem;
+  list-style: inside;
+  line-height: 2;
+}
+.section-intro__time-details li {
+  margin-left: 1rem;
+}
+.section-intro__time-details span {
+  font-weight: 600;
+  margin-left: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
