--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,11 @@
 
+
 @import "abstracts/variables";
 
 @import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
 @import "layout/container";
+
+@import "pages/recipe";
