add ingredient section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/horizontal-rule";
+
 @import "layout/container";
 
 @import "pages/recipe";
