--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,13 @@ body {
   margin: 3rem 0 1rem 0;
 }
 
+.heading-secondary {
+  font-size: 3rem;
+  font-family: var(--font-heading);
+  font-weight: 500;
+  margin: 3rem 0 1rem 0;
+}
+
 .heading-tertiary {
   font-size: 2rem;
   font-weight: 600;
@@ -59,26 +66,26 @@ body {
   margin-bottom: 1rem;
 }
 
+hr {
+  opacity: 0.5;
+  margin: 3.5rem 0;
+}
+
 .container {
   background-color: var(--color-white);
   max-width: 75rem;
   padding: 4rem;
   border-radius: 20px;
   margin: 0 auto;
-  height: 100vh;
 }
 
-.section-intro {
-  width: 100%;
-  height: 100%;
-}
 .section-intro__img {
   display: block;
   width: 100%;
   border-radius: 20px;
 }
 .section-intro__preparation-time {
-  margin: 2rem 0;
+  margin: 4rem 0 2rem 0;
   background-color: hsla(332, 51%, 32%, 0.06);
   border-radius: 20px;
   padding: 2rem 3rem;
@@ -94,6 +101,19 @@ body {
 }
 .section-intro__time-details span {
   font-weight: 600;
+  margin-left: 1rem;
+}
+
+.section-ingredients__list {
+  color: var(--color-wenge-brown);
+  font-size: 1.6rem;
+  list-style: inside;
+  line-height: 2;
+}
+.section-ingredients__list li {
+  margin-left: 1rem;
+}
+.section-ingredients__list li span {
   margin-left: 1rem;
 }
 
