--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,11 +13,18 @@ body    {
     margin: 3rem 0 1rem 0;
 }
 
+.heading-secondary  {
+    font-size: 3rem;
+    font-family: var(--font-heading);
+    font-weight: 500;
+    margin: 3rem 0 1rem 0;
+}
+
 .heading-tertiary   {
     font-size: 2rem;
     font-weight: 600;
     color: var(--color-primary-2);
-    
+
 }
 
 .paragraph  {
