--- a/sass/pages/_recipe.scss
+++ b/sass/pages/_recipe.scss
@@ -1,6 +1,4 @@
 .section-intro {
-    width: 100%;
-    height: 100%;
 
     &__img  {
         display: block;
@@ -9,7 +7,7 @@
     }
 
     &__preparation-time {
-        margin: 2rem 0;
+        margin: 4rem 0 2rem 0;
         background-color: hsla(332, 51%, 32%, .06);
         border-radius: 20px;
         padding: 2rem 3rem;
@@ -33,5 +31,18 @@
 }
 
 .section-ingredients    {
-    
+    &__list {
+        color: var(--color-wenge-brown);
+        font-size: 1.6rem;
+        list-style: inside;
+        line-height: 2;
+
+        li  {
+            margin-left: 1rem;
+            
+            span    {
+                margin-left: 1rem;
+            }
+        }
+    }
 }
