--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ body {
 }
 
 hr {
-  opacity: 0.5;
+  opacity: 0.4;
   margin: 3.5rem 0;
 }
 
@@ -93,27 +93,47 @@ hr {
 .section-intro__time-details {
   color: var(--color-wenge-brown);
   font-size: 1.6rem;
-  list-style: inside;
-  line-height: 2;
 }
 .section-intro__time-details li {
-  margin-left: 1rem;
+  margin-left: 2.4rem;
+  padding: 0.4rem;
+  padding-left: 1.5rem;
+}
+.section-intro__time-details li::marker {
+  color: var(--color-primary-2);
 }
 .section-intro__time-details span {
   font-weight: 600;
-  margin-left: 1rem;
 }
 
 .section-ingredients__list {
   color: var(--color-wenge-brown);
   font-size: 1.6rem;
-  list-style: inside;
-  line-height: 2;
 }
 .section-ingredients__list li {
-  margin-left: 1rem;
+  margin-left: 2.8rem;
+  padding: 0.4rem;
+  padding-left: 1.7rem;
 }
-.section-ingredients__list li span {
+.section-ingredients__list li::marker {
+  color: var(--color-primary-1);
+}
+
+.section-instructions__list {
+  color: var(--color-wenge-brown);
+  font-size: 1.6rem;
+}
+.section-instructions__list li {
+  padding: 0.4rem;
+  margin-left: 3rem;
+  padding-left: 1.5rem;
+}
+.section-instructions__list li::marker {
+  color: var(--color-primary-1);
+  margin-right: 1rem;
+  font-weight: 700;
+}
+.section-instructions__list li span {
   margin-left: 1rem;
 }
 
