--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+/*  
+    0   - 400px:    small-phone
+    400 - 600px:    phone
+    600 - 900px:    Tablet(portrait)
+    900 - 1200px:   Tablet(landscape)
+    (1200 to 1800px is where our normal styles apply)
+    1800px +:       Big Desktop
+
+    $breakpoint argument choices:
+    -small-phone
+    -phone
+    -tab-port
+    -tab-land
+    -big-desktop
+*/
 :root {
   --color-primary-1: hsl(14, 45%, 36%);
   --color-primary-2: hsl(332, 51%, 32%);
@@ -22,11 +37,46 @@
 html {
   font-size: 62.5%;
 }
+@media only screen and (min-width: 112.5em) {
+  html {
+    font-size: 81.25%;
+  }
+}
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  html {
+    font-size: 50%;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  html {
+    font-size: 43.75%;
+  }
+}
+@media only screen and (max-width: 25em) {
+  html {
+    font-size: 37.5%;
+  }
+}
 
 body {
   box-sizing: border-box;
   padding: 10rem 20rem;
   background-color: var(--color-eggshell);
+}
+@media only screen and (max-width: 56.25em) {
+  body {
+    padding: 5rem 10rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  body {
+    padding: 0;
+  }
 }
 
 body {
@@ -43,12 +93,29 @@ body {
   font-weight: 400;
   margin: 3rem 0 1rem 0;
 }
+@media only screen and (max-width: 56.25em) {
+  .heading-primary {
+    font-size: 3.7rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .heading-primary {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+}
 
 .heading-secondary {
   font-size: 3rem;
   font-family: var(--font-heading);
   font-weight: 500;
   margin: 3rem 0 1.3rem 0;
+}
+@media only screen and (max-width: 37.5em) {
+  .heading-secondary {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
 }
 
 .heading-tertiary {
@@ -60,6 +127,12 @@ body {
 .paragraph {
   font-size: 1.6rem;
   color: var(--color-wenge-brown);
+}
+@media only screen and (max-width: 37.5em) {
+  .paragraph {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
 }
 
 .u-margin-bottom-small {
@@ -74,6 +147,12 @@ hr {
   opacity: 0.4;
   margin: 3.5rem 0;
 }
+@media only screen and (max-width: 37.5em) {
+  hr {
+    width: 90%;
+    margin: 3.5rem auto;
+  }
+}
 
 .container {
   background-color: var(--color-white);
@@ -82,17 +161,39 @@ hr {
   border-radius: 20px;
   margin: 0 auto;
 }
+@media only screen and (max-width: 75em) {
+  .container {
+    max-width: 100%;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .container {
+    border-radius: 0;
+    padding: 0;
+  }
+}
 
 .section-intro__img {
   display: block;
   width: 100%;
   border-radius: 20px;
 }
+@media only screen and (max-width: 56.25em) {
+  .section-intro__img {
+    border-radius: 0;
+  }
+}
 .section-intro__preparation-time {
   margin: 4rem 0 2rem 0;
   background-color: hsla(332, 51%, 32%, 0.06);
   border-radius: 20px;
   padding: 2rem 3rem;
+}
+@media only screen and (max-width: 37.5em) {
+  .section-intro__preparation-time {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
 }
 .section-intro__time-details {
   color: var(--color-wenge-brown);
@@ -114,6 +215,12 @@ hr {
   color: var(--color-wenge-brown);
   font-size: 1.6rem;
 }
+@media only screen and (max-width: 37.5em) {
+  .section-ingredients__list {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+}
 .section-ingredients__list li {
   margin-left: 2.8rem;
   padding: 0.4rem;
@@ -126,6 +233,12 @@ hr {
 .section-instructions__list {
   color: var(--color-wenge-brown);
   font-size: 1.6rem;
+}
+@media only screen and (max-width: 37.5em) {
+  .section-instructions__list {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
 }
 .section-instructions__list li {
   padding: 0.4rem;
@@ -141,27 +254,39 @@ hr {
   margin-left: 1rem;
 }
 
+@media only screen and (max-width: 37.5em) {
+  .section-nutrition {
+    padding-bottom: 3rem;
+  }
+}
 .section-nutrition__table {
   font-size: 1.6rem;
   border-collapse: collapse;
   width: 100%;
   text-align: left;
 }
+@media only screen and (max-width: 37.5em) {
+  .section-nutrition__table {
+    padding: 4rem;
+    padding-right: 4rem;
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 .section-nutrition__table--row:not(:last-of-type) {
   border-bottom: 1px solid rgba(128, 128, 128, 0.4);
 }
-.section-nutrition__table td,
-.section-nutrition__table th {
-  padding: 1rem;
-}
-.section-nutrition__table th {
+.section-nutrition__table--header {
   font-weight: 400;
   color: var(--color-wenge-brown);
   padding-left: 3rem;
   width: 50%;
 }
-.section-nutrition__table td {
+.section-nutrition__table--value {
   font-weight: 700;
+}
+.section-nutrition__table--header, .section-nutrition__table--value {
+  padding: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
