--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,11 +8,39 @@
 
 html    {
     font-size: 62.5%; //1rem = 10px
+
+    @include respond(big-desktop)   {
+        font-size: 81.25%; // 1rem = 13px
+    }
+
+    @include respond(tab-land)   {
+        font-size: 56.25%; // 1rem = 9px
+    }
+
+    @include respond(tab-port)   {
+        font-size: 50%; // 1rem = 8px
+    }
+
+    @include respond(phone)   {
+        font-size: 43.75%; // 1rem = 7px
+    }
+
+    @include respond(small-phone)   {
+        font-size: 37.5%; // 1rem = 6px
+    }
 }
 
 body    {
     box-sizing: border-box;
     padding: 10rem 20rem;
     background-color: var(--color-eggshell);
+
+    @include respond(tab-port)   {
+        padding: 5rem 10rem;
+    }
+
+    @include respond(phone)   {
+        padding: 0;
+    }
 }
 
